After many bugfixes, everything that is expected to work, works !